# fontmake

./: -  .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  TROUBLESHOOTING.md  USAGE.md  build_pyz.sh  dev_requirements.txt  fontmake.1  pyproject.toml  requirements-pypy.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: ci.yml  test.yml
Lib/fontmake/: __init__.py  __main__.py  compatibility.py  errors.py  font_project.py  font_project_test.py  instantiator.py  kern_feature.py  mark_feature.py  ttfautohint.py
test/: GlyphsUnitTestSans.glyphs  GuidelineTest.glyphs  NotoSansEthiopic-MM.glyphs  NotoSansEthiopic.html  NotoSansHebrew-MM.glyphs  NotoSansHebrew.html  README  run.sh  test_arguments.py  test_output.py
test/AvarDesignspaceTest/: AvarDesignspaceTest.designspace
test/DesignspaceTest/: DesignspaceTest.designspace
test/InterpolateLayoutTest/: InterpolateLayoutTest 0 GPOS.txt  InterpolateLayoutTest.plist
test/NotoSansDevanagari/: Noto Sans Devanagari Black Condensed GPOS.txt  Noto Sans Devanagari Black GPOS.txt  Noto Sans Devanagari Black GSUB w172-190.txt  Noto Sans Devanagari Bold Condensed GPOS.txt  Noto Sans Devanagari Bold GPOS.txt  Noto Sans Devanagari Bold GSUB w122-171.txt  Noto Sans Devanagari Condensed GPOS.txt  Noto Sans Devanagari GDEF.txt  Noto Sans Devanagari Regular GPOS.txt  Noto Sans Devanagari Regular GSUB w59-121.txt  (+17 more)
tests/: conftest.py  test_compatibility.py  test_instantiator.py  test_main.py
(+461 files in other folders)
