[wheel]
universal = 0

[sdist]
formats = zip

[metadata]
license_file = LICENSE

[flake8]
select = B, C, E, F, W, T4, B9
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 20
exclude = .git, __pycache__, build, dist, .eggs, .tox

[tool:pytest]
filterwarnings =
    ignore:fromstring:DeprecationWarning
    ignore:tostring:DeprecationWarning
